--- a/lib/generators/slouch/templates/_form.html.erb
+++ b/lib/generators/slouch/templates/_form.html.erb
@@ -1,10 +1,10 @@
-<%%= form_for(@person) do |f| %>
-  <%% if @person.errors.any? %>
+<%%= form_for(@<%= rails_model_name %>) do |f| %>
+  <%% if @<%= rails_model_name %>.errors.any? %>
     <div id="error_explanation">
-      <h2><%%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</h2>
+      <h2><%%= pluralize(@<%= rails_model_name %>.errors.count, "error") %> prohibited this person from being saved:</h2>
 
       <ul>
-      <%% @person.errors.full_messages.each do |msg| %>
+        <%% @<%= rails_model_name %>.errors.full_messages.each do |msg| %>
         <li><%%= msg %></li>
       <%% end %>
       </ul>
