--- a/lib/generators/slouch/templates/edit.html.erb
+++ b/lib/generators/slouch/templates/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing person</h1>
+<h1>New <%= name.humanize.downcase %></h1>
 
 <%%= render 'form' %>
 
-<%%= link_to 'Show', @person, class: 'action' %>
-<%%= link_to 'Back', people_path, class: 'action' %>
+<%%= link_to 'Show', @<%= rails_model_name %>, class: 'action' %>
+<%%= link_to 'Back', <%= rails_collection_name %>_path, class: 'action' %>
