--- a/lib/generators/slouch/templates/new.html.erb
+++ b/lib/generators/slouch/templates/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New <%= name.humanize.downcase %></h1>
 
-<%%= render 'form' %>
+<%%= render "form" %>
 
-<%%= link_to 'Back', <%= rails_collection_name %>_path, class: 'action' %>
+<%%= link_to "Back", <%= rails_collection_name %>_path, class: "action" %>
