--- a/lib/generators/slouch/templates/show.html.erb
+++ b/lib/generators/slouch/templates/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%%= notice %></p>
 
 
-<%%= link_to 'Edit', edit_<%= rails_model_name %>_path(@<%= rails_model_name %>), class: 'action' %>
-<%%= link_to 'Back', <%= rails_collection_name %>_path, class: 'action' %>
+<%%= link_to "Edit", edit_<%= rails_model_name %>_path(@<%= rails_model_name %>), class: "action" %>
+<%%= link_to "Back", <%= rails_collection_name %>_path, class: "action" %>
