--- a/lib/generators/slouch/templates/_form.html.erb
+++ b/lib/generators/slouch/templates/_form.html.erb
@@ -19,6 +19,7 @@
       </div>
     <% end -%>
   </fieldset>
-  <%%= f.submit class: 'action submit' %>
+
+  <%%= f.submit class: "action submit" %>
 <%% end %>
 
