--- a/lib/generators/slouch/templates/index.html.erb
+++ b/lib/generators/slouch/templates/index.html.erb
@@ -3,12 +3,10 @@
 <ul class="list">
   <%% @<%= rails_collection_name %>.each do |<%= rails_model_name %>| %>
     <li>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <% attributes.each do |attribute| -%>
+        <%%= <%= rails_model_name %>.<%= attribute.name %> %>,
+      <% end -%>
+
       <div class="actions">
         <%%= link_to "Show", <%= rails_model_name %>, class: "action" %>
         <%%= link_to "Edit", edit_<%= rails_model_name %>_path(<%= rails_model_name %>), class: "action" %>
