--- a/lib/generators/slouch/templates/index.html.erb
+++ b/lib/generators/slouch/templates/index.html.erb
@@ -3,9 +3,7 @@
 <ul class="list">
   <%% @<%= rails_collection_name %>.each do |<%= rails_model_name %>| %>
     <li>
-      <% attributes.each do |attribute| -%>
-        <%%= <%= rails_model_name %>.<%= attribute.name %> %>,
-      <% end -%>
+      <%%= <%= rails_model_name %>.<%= attributes.first.name %> %>
 
       <div class="actions">
         <%%= link_to "Show", <%= rails_model_name %>, class: "action" %>
