--- a/lib/generators/slouch/templates/show.html.erb
+++ b/lib/generators/slouch/templates/show.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%%= notice %></p>
 
+<% attributes.each do |attribute| -%>
+  <%= attribute.name %>
+  <%%= @<%= rails_model_name %>.<%= attribute.name %> %>
+<% end -%>
 
 <%%= link_to "Edit", edit_<%= rails_model_name %>_path(@<%= rails_model_name %>), class: "action" %>
 <%%= link_to "Back", <%= rails_collection_name %>_path, class: "action" %>
