Humanize show labels

--- a/lib/generators/slouch/templates/show.html.erb
+++ b/lib/generators/slouch/templates/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%%= notice %></p>
 
 <% attributes.each do |attribute| -%>
-  <%= attribute.name %>
+  <%= attribute.name.humanize %>
   <%%= @<%= rails_model_name %>.<%= attribute.name %> %>
 <% end -%>
 
