show does now have a nice template

--- a/lib/generators/slouch/templates/index.html.erb
+++ b/lib/generators/slouch/templates/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing <%= name.pluralize.humanize %></h1>
+<h1>
+  <span>Listing <%= name.pluralize.humanize %></span>
+</h1>
 
 <ul class="list">
   <%% @<%= rails_collection_name %>.each do |<%= rails_model_name %>| %>
