--- a/lib/generators/slouch/templates/new.html.erb
+++ b/lib/generators/slouch/templates/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New <%= name.humanize.downcase %></h1>
+<h1>
+  <span>New <%= name.humanize.downcase %></span>
+</h1>
 
 <%%= render "form" %>
 
